# sccs-code

./: analyze.py  main.py  pyproject.toml  run.sh
results/capped-10/: 10.json  110.json  130.json  150.json  170.json  190.json  210.json  230.json  250.json  270.json  290.json  30.json  310.json  330.json  350.json  370.json  390.json  410.json  430.json  450.json  470.json  490.json  50.json  510.json  530.json  550.json  570.json  590.json  610.json  630.json  650.json  670.json  690.json  70.json  710.json  730.json  750.json  770.json  790.json  810.json  (+10 more)
results/uncapped/: 10.json  110.json  130.json  150.json  170.json  190.json  210.json  230.json  250.json  270.json  290.json  30.json  310.json  330.json  350.json  370.json  390.json  410.json  430.json  450.json  470.json  490.json  50.json  510.json  530.json  550.json  570.json  590.json  610.json  630.json  650.json  670.json  690.json  70.json  710.json  730.json  750.json  770.json  790.json  810.json  (+10 more)
simulator/: db.py  types.py  workload.py
