[tool.poetry]
name = "simulation"
version = "0.1.0"
description = "Simulation for paper 'Minimizing Lost Updates Under Read-Atomic Isolation With Lazy Transactions'"
authors = ["serramatutu <lucasvvop@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
